fixed spacing around typewriter, made styling changes to keep social media icons from bumping

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,7 +1,3 @@
-// h1 {
-//   // color: black;
-// }
-
 main {
   display: flex;
   flex-direction: column;
@@ -12,14 +8,9 @@ main {
   .greeting {
     display: flex;
     flex-direction: column;
-    // padding: 16px;
-
-    // .hello {
-    //   color: white;
-    // }
+    min-height: 10rem;
   }
   .links {
-    height: 5rem;
     display: flex;
     align-items: center;
     gap: 2rem;
